[F] Add http endpoint to control preferences
Includes Swagger documentation fixes for missing IDs
